# mkbib-old

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  Untitled.bib  autogen.sh  configure.ac
data/: Makefile  Makefile.am  Makefile.in  mkbib.desktop  mkbib.desktop.in  org.mkbib.gschema.xml
help/: Makefile.am  mkbib-manual.omf.in
help/C/: contacts.page  feature.page  google.page  index.page  install.page  interface.page  introduction.page  keyboard-shortcuts.page  legal.xml  mkbib-manual.xml  new.page  old.page  trouble.page
help/bn_IN/: bn_IN.po  legal.xml
help/en_GB/: en_GB.po
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  POTFILES.in  bn_IN.po  default.po
src/: bib.y  biblst  caution.c  file_util.c  help.c  main.h  mkbib.c  scan.l  search.c  update_file.c  view.c
