@YELP_HELP_RULES@

HELP_ID = mkbib 

HELP_FILES = \
	     index.page \
	     interface.page \
	     introduction.page \
	     keyboard-shortcuts.page \
	     legal.xml \
	     new.page \
	     old.page 
HELP_MEDIA = \
	     images/mkbib.png \
	     images/left_pane.png \
	     images/right_pane.png
HELP_LINGUAS = 
