@YELP_HELP_RULES@

HELP_ID = mkbib

HELP_FILES = \
	     contacts.page \
	     feature.page \
	     google.page \
	     index.page \
	     install.page \
	     interface.page \
	     introduction.page \
	     keyboard-shortcuts.page \
	     legal.xml \
	     new.page \
	     old.page \
	     trouble.page 

HELP_MEDIA = \
	     images/mkbib.png \
	     images/left_pane.png \
	     images/right_pane.png \
	     images/entry_pane.png

HELP_LINGUAS =bn_IN en_GB 

DISTCLEANFILES = \
	Makefile.in
